# FilingLens

./: .env.example  .env.local.example  .env.siliconflow.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements-freeze.txt
data/: companies.yaml  metric_mappings.yaml
docs/: architecture.md  data_sources.md  demo_walkthrough.md  evaluation.md
eval/: analyze_release_blockers.py  answer_benchmark_v2.jsonl  answer_benchmark_v2.schema.json  benchmark.jsonl  benchmark_event_v11.jsonl  conversational_benchmark.jsonl  financial_agent_regression_12.jsonl  methodology_answer_benchmark.jsonl  methodology_benchmark.jsonl  methodology_intent_benchmark.jsonl  metrics.py  retrieval_gold.jsonl  run_answer_benchmark.py  run_conversational_eval.py  run_eval.py  run_financial_agent_regression.py  run_manual_api_probe_20.py  run_methodology_eval.py  run_methodology_intent_eval.py  run_phase5_release_eval.py  run_report_eval.py  run_retrieval_eval.py  single_company_fundamental_semantic_eval.jsonl
frontend/: app.js  index.html  styles.css
scripts/: build_event_price_windows.py  build_filing_events.py  build_vectorstore.py  check_answer_evidence_contract.py  chunk_filings.py  compare_rag_versions.py  data_status.py  download_filings.py  download_models.py  download_prices.py  drilldown_text_evidence.py  generate_conversational_live_path_diagnostic_report.py  generate_evidence_requirement_upgrade_report.py  generate_text_evidence_reliability_report.py  load_financial_data.py  load_sec_companyfacts.py  parse_filings.py  rebuild_vectorstore_v2_gpu.sh  report_financial_fact_reconciliation.py  report_methodology_data_coverage.py  report_rag_baseline.py  run_answer_quality_drilldown.py  run_phase2_pipeline.py  start_embedding_server.sh  start_full_stack.sh  start_llm_server.sh  start_local_stack.sh  start_siliconflow_stack.sh  test_agent_e2e.py  test_models.py  verify_e2e.py  verify_intent_contract.sh
src/: utils_data.py
tests/: test_agent.py  test_analysis_framework.py  test_analyst_draft.py  test_analyst_loop.py  test_analytical_reasoning_policy.py  test_answer_benchmark_v2.py  test_answer_depth_quality.py  test_answer_evidence_contract.py  test_answer_relevance.py  test_answering_partial_evidence.py  (+68 more)
(+67 files in other folders)
